Changes to be committed: 	new file:   .textlintrc 	deleted:    README.md 	deleted:    articles/qpe250212fusion.md 	new file:   articles/qpe250213fusion.md 	new file:   articles/qpe250309energy_type.md 	new file:   articles/qpq250218fusion.md 	new file:   articles/qpq250220mass_defect.md 	new file:   articles/qpq250316photon_kine.md 	new file:   images/qpe250309energy_type.webp 	new file:   images/qpq250316kine.webp 	modified:   nohup.out 	modified:   package-lock.json 	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "textlint": "^14.4.2",
+    "textlint-rule-preset-ja-technical-writing": "^10.0.2",
+    "textlint-rule-preset-jtf-style": "^2.3.14",
+    "textlint-rule-prh": "^6.0.0",
     "zenn-cli": "^0.1.158"
   }
 }
